syntax="proto3";

option java_multiple_files=true;
option java_generic_services=true;

option java_package="com.qifly.core.protocol.data";
option java_outer_classname="RpcData";

import "google/protobuf/any.proto";

enum RpcStatusCode {
  RPC_SUCCESS = 0;

  // 通用错误
  RPC_UNKNOWN_ERROR = 1000; // 未知错误
  RPC_SERVICE_NOT_FOUND_ERROR = 1001; // 服务未找到
  RPC_METHOD_NOT_FOUND_ERROR = 1002; // 方法未找到
  RPC_METHOD_REQUEST_ERROR = 1003; // 请求内容错误
}

message RpcBody {
  int32 rpc_id = 1; // 方法唯一标识
  google.protobuf.Any data = 2; // 请求或响应体
  RpcStatusCode statusCode = 3; // 内部状态码
}
